# blextism

./: .gitignore  Cargo.toml  DESIGN.md  README.md  blend.py  extism.json  genschema.py  justfile  repl.py  run.py
crates/bindgen/: Cargo.toml
crates/bindgen/src/: main.rs
crates/pdk/: Cargo.toml
crates/pdk/src/: lib.rs
crates/pdkgen/: Cargo.toml
crates/pdkgen/src/: main.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
