[package]
name = "pdk"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.0.0-rc1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
smartstring = { version = "1.0.1", features = ["serde"] }

[lib]
crate_type = ["cdylib"]
