[package]
name = "blextism"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
extism-pdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smartstring = { workspace = true }
