[package]
name = "blender-extism-wasm-pdkgen"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
smartstring = { version = "1.0.1", features = ["serde"] }
syn = "2.0.39"
