[package]
name = "plugin"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
blender-extism-wasm-pdk = { workspace = true }
extism-pdk = { workspace = true }

[lib]
crate_type = ["cdylib"]
